EBEAST: install ebeast app/ data as bundle/app/
Move the installed ebeast bundle paths, so app/ has the same directory depth
relative to the Beast project root during development and installation.
This simplifies access to other resources like media files.

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/ebeast/Makefile.sub
+++ b/ebeast/Makefile.sub
@@ -142,8 +142,8 @@ ebeast-install: ebeast/bundlecache/ebeast
 	$(MKDIR_P) "$(DESTDIR)$(beastdir)"
 	rm -rf "$(DESTDIR)$(beastdir)/bundle" "$(DESTDIR)$(beastdir)/app"
 	cp -RP ebeast/bundlecache "$(DESTDIR)$(beastdir)/bundle"
-	mv "$(DESTDIR)$(beastdir)/bundle/resources/app" "$(DESTDIR)$(beastdir)/"
-	ln -s ../../app "$(DESTDIR)$(beastdir)/bundle/resources/app"
+	mv "$(DESTDIR)$(beastdir)/bundle/resources/app" "$(DESTDIR)$(beastdir)/bundle/"
+	ln -s ../app "$(DESTDIR)$(beastdir)/bundle/resources/app"
 ebeast-uninstall:
 	rm -rf "$(DESTDIR)$(beastdir)/bundle/" "$(DESTDIR)$(beastdir)/app/"
 
