BUILD: include keys/Makefile.sub
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/Makefile.am
+++ b/Makefile.am
@@ -61,6 +61,9 @@ include Samples/Makefile.sub
 # == Effects/ ==
 include Effects/Makefile.sub
 
+# == keys/ ==
+include keys/Makefile.sub
+
 # == doc/ install ==
 projectdocsdir   = $(beastdocdir)/
 projectdocs_DATA = HACKING README NEWS COPYING
