TRAVIS: show timestamps during test builds to gauge speedup potential
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ install:
 
 script:
   # Build inside docker container
+  - TZ=GMT date
   - misc/dockerbuild.sh "$DIST" "$INTENT"
   - docker ps -a
 
