PLUGINS: install under $(beastdatadir)/plugins/
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/plugins/Makefile.am
+++ b/plugins/Makefile.am
@@ -62,7 +62,7 @@ plugins_built_sources 	  =
 CLEANFILES 		 += $(plugins_built_sources)
 # .FPU plugins
 plugin_FPU_LTLIBRARIES	  = cxxplugins.FPU.la
-plugin_FPUdir 	  	  = $(bselibdir)/plugins
+plugin_FPUdir 	  	  = $(beastdatadir)/plugins
 FPU_PLUGIN_CFLAGS	  = $(AM_CFLAGS) $(PLUGIN_FLAGS) $(FPU_FLAGS)
 FPU_PLUGIN_CXXFLAGS	  = $(AM_CXXFLAGS) $(PLUGIN_FLAGS) $(FPU_FLAGS)
 
