SPECTMORPH: use new spectmorph-0.4.0 ui libs (no longer based on Qt5)
Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/plugins/spectmorph/gui/Makefile.am
+++ b/plugins/spectmorph/gui/Makefile.am
@@ -1,13 +1,8 @@
 include $(top_srcdir)/Makefile.decl
 
-# FIXME: this is probably not the right place for -fPIC
-
-AM_CXXFLAGS += $(SPECTMORPHGUI_CFLAGS) $(SPECTMORPH_CFLAGS) $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DBSE_CONVENIENCE -DQT_NO_EMIT -fPIC
+AM_CXXFLAGS += $(SPECTMORPHGLUI_CFLAGS) $(SPECTMORPH_CFLAGS) $(BSE_CFLAGS) $(RAPICORN_CFLAGS) -DBSE_CONVENIENCE
 
 bin_PROGRAMS = spectmorphoscgui
 
-spectmorphoscgui_SOURCES = spectmorphoscgui.cc moc_spectmorphoscgui.cc spectmorphoscgui.hh
-spectmorphoscgui_LDADD   = ../../../bse/libbse-@MAJOR@.la $(LIBBSE_LIBS) $(SPECTMORPH_LIBS) $(SPECTMORPHGUI_LIBS)
-
-moc_spectmorphoscgui.cc: spectmorphoscgui.hh
-	$(QT5_MOC) spectmorphoscgui.hh > moc_spectmorphoscgui.cc
+spectmorphoscgui_SOURCES = spectmorphoscgui.cc spectmorphoscgui.hh
+spectmorphoscgui_LDADD   = ../../../bse/libbse-@MAJOR@.la $(LIBBSE_LIBS) $(SPECTMORPH_LIBS) $(SPECTMORPHGLUI_LIBS)
