BUILD: .travis.yml: include ubuntu:bionic test builds
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ env:
   matrix:
     - DIST="ubuntu:xenial"      INTENT="gccbuild,distcheck"
     - DIST="ubuntu:artful"      INTENT="gccbuild"
+    - DIST="ubuntu:bionic"      INTENT="gccbuild"
     # test upcoming releases and get new compiler warnings
     - DIST="ubuntu:artful"      INTENT="clangbuild"
     - DIST="debian:unstable"    INTENT="gccbuild"
