BUILD: determine soundfont test threshold from fluidsynth version
Signed-off-by: Stefan Westerfeld <stefan@space.twc.de>

--- a/configure.ac
+++ b/configure.ac
@@ -314,6 +314,16 @@ dnl # FIXME: BSE_LIBS=`printf %s "$BSE_LIBS" | sed 's/\(-pthread\b\)/\1 -lpthrea
 BSE_CFLAGS="$BSE_CFLAGS ${PTHREAD_CFLAGS:--D_REENTRANT}"
 BSE_LIBS="$BSE_LIBS ${PTHREAD_LIBS:--lpthread}"
 
+# == fluidsynth version check ==
+if $PKG_CONFIG "fluidsynth >= 1.1.7"; then
+  # new version: should produce correct check-af-tests output
+  FLUID_THRESHOLD=99.99
+else
+  # old version: incorrect test output, use lower threshold
+  FLUID_THRESHOLD=99.7
+fi
+AC_SUBST(FLUID_THRESHOLD)
+
 # == libz ==
 AC_CHECK_LIB(z, gzsetparams, [ LIBZ_LIBS='' ; test "$ac_cv_header_zlib_h" = yes && LIBZ_LIBS='-lz' ])
 if test -z "$LIBZ_LIBS"; then
