configure.ac: fix bugs gcc introduced with eliminating explicit NULL checks
Add -fno-delete-null-pointer-checks to counter gcc bugs introduced via strict
"undefined behavior" interpretation.

Signed-off-by: Tim Janik <timj@gnu.org>

--- a/configure.ac
+++ b/configure.ac
@@ -163,7 +163,7 @@ gcc_c_only_flags="-fno-cond-mismatch -fdevirtualize-speculatively"
 compiler_flags="-pipe"
 optimization_flags="-O3 -funroll-loops -ftree-vectorize"
 FAST_MATH_FLAGS="-ffast-math"
-gcc_flags="-rdynamic -finline-functions -ftracer -ftree-loop-distribution -ftree-loop-ivcanon -ftree-loop-im"
+gcc_flags="-rdynamic -finline-functions -ftracer -ftree-loop-distribution -ftree-loop-ivcanon -ftree-loop-im -fno-delete-null-pointer-checks"
 gcc_fast_math="-fivopts"
 clang_fix_flags="-Qunused-arguments"		# avoid bogus -pthread warning (llvm#7798)
 x86_flags="-minline-all-stringops"
