BSE: monitor: add SignalMonitor interface to IDL
Signed-off-by: Tim Janik <timj@gnu.org>

--- a/bse/Makefile.am
+++ b/bse/Makefile.am
@@ -58,6 +58,7 @@ bse_public_headers = $(strip \
 	bseincluder.hh		\
 	ladspa.hh		\
 	memory.hh		\
+	monitor.hh		\
 	testobject.hh		\
 )
 # BSE C & C++ sources
@@ -99,6 +100,7 @@ bse_sources = $(strip \
 	bsebasics.cc		\
 	bseprobe.cc		\
 	memory.cc		\
+	monitor.cc		\
 	testobject.cc		\
 )
 # BSE Synthesis Modules
